yamls/client-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: typing-game
spec:
  type: NodePort
  selector:
    app: typing-game
  ports:
    - port: 3000
      protocol: TCP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: typing-game
  name: typing-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: typing-game
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: typing-game
    spec:
      containers:
        - image: docker.io/kiyo0328/typing-game:v2
          name: typing-game
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 3000
status: {}
