yamls/gateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  type: NodePort
  selector:
    app: apigateway
  ports:
    - port: 4000
      protocol: TCP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: apigateway
  name: apigateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apigateway
    spec:
      containers:
        - image: docker.io/kiyo0328/apigateway:v1
          name: apigateway
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 4000
status: {}
